classDiagram
    direction TB

    class User {
        -id : String
        -email : String
        -passwordHash : String
        -firstName : String
        -lastName : String
        -phone : String
        -role : UserRole
        -avatarUrl : String
        -isActive : Boolean
        -emailVerified : Boolean
        +register(data) User
        +authenticate(email, pwd) Token
        +verifyEmail(token) void
        +updateProfile(data) void
        +changePassword(old, new) void
        +resetPassword(token) void
        +deactivate() void
    }

    class UserRole {
        <<enumeration>>
        ADMIN
        CLIENT
    }

    class Address {
        -id : String
        -label : String
        -street : String
        -city : String
        -zipCode : String
        -country : String
        -isDefault : Boolean
        +setAsDefault() void
    }

    class OAuthAccount {
        -id : String
        -provider : String
        -providerAccountId : String
        +linkAccount() void
        +unlinkAccount() void
    }

    User --> UserRole : a
    User "1" *-- "*" Address : possède
    User "1" *-- "*" OAuthAccount : lié à
